--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server.port=8090
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://thefoodbox.cp6ffblwqnjj.us-east-1.rds.amazonaws.com/foodbox?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://foodbox-database.cp6ffblwqnjj.us-east-1.rds.amazonaws.com/foodbox?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password123
 
