--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-spring.datasource.url=jdbc:mysql://foodbox-database.cp6ffblwqnjj.us-east-1.rds.amazonaws.com:3306/foodbox
+spring.datasource.url=jdbc:mysql://foodbox-database.cp6ffblwqnjj.us-east-1.rds.amazonaws.com/foodbox
 spring.datasource.username=root
 spring.datasource.password=password123
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 
