--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://foodbox-db.cp6ffblwqnjj.us-east-1.rds.amazonaws.com/foodbox
+spring.datasource.url=jdbc:mysql://foodbox-database.cp6ffblwqnjj.us-east-1.rds.amazonaws.com/foodbox
 spring.datasource.username=root
 spring.datasource.password=password123
 
